--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "8.12.2"
+    "node": "^8.12.2"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
